# ComfyUI_Text_Processor

./: .gitignore  .pre-commit-config.yaml  Image_concat_advanced.py  LICENSE  README.md  README.zh-TW.md  __init__.py  add_text_to_image.py  advanced_image_saver.py  advanced_text_filter.py  font_manager.py  image_cropper.py  mask_nodes.py  pyproject.toml  requirements.txt  simple_eval.py  text_input.py  text_scraper.py  text_storage.json  text_storage.py  wildcards.py  wildcards_adv.py
.github/workflows/: publish.yml
scripts/: run_full_tests_linux.sh  run_full_tests_windows.ps1
tests/: E2E_TESTING_NOTICE.md  E2E_TESTING_SOP.md  TEST_SOP.md  test_advanced_image_saver_aesthetic.py  test_advanced_image_saver_metadata.py  test_advanced_image_saver_paths.py  test_advanced_text_filter.py  test_advanced_text_filter_regex.py  test_dependency_metadata.py  test_image_concat_advanced.py  test_node_registration.py  test_text_scraper_url_safety.py  test_text_storage_reader.py  test_wildcards_paths.py
wildcards/: animal.txt  animals.txt  artstyle.txt  background.txt  camangle.txt  cameras.txt  casualoutfit.txt  citypeople.txt  color.txt  colors.txt  countrypeople.txt  creature.txt  cuteanimal.txt  example_format.txt  eyes.txt  flower.txt  gemstones.txt  god.txt  hair.txt  hero.txt  horroroutfit.txt  horrorplace.txt  horrorszene.txt  horrorszene2.txt  horrorwesen.txt  horrorwesen2.txt  insect.txt  lingerie.txt  medievaloutfit.txt  mysticplace.txt  mythanimals.txt  neg.txt  nightplaces1.txt  nightworker1.txt  outfit.txt  place.txt  plant.txt  pos.txt  sexydress.txt  sexyoutfit.txt  (+5 more)
