[project]
name = "text_processor"
description = "A comprehensive suite of utility nodes for ComfyUI: Text Processing, Logic Evaluation, and Image Tools."
version = "1.3.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["simpleeval"]

[project.urls]
Repository = "https://github.com/rookiestar28/ComfyUI_Text_Processor"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/rookiestar28/ComfyUI_Text_Processor/wiki"
"Bug Tracker" = "https://github.com/rookiestar28/ComfyUI_Text_Processor/issues"

[tool.comfy]
PublisherId = "rookiestar"
DisplayName = "ComfyUI Text Processor"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

